fix: Edit name path

--- a/cars_uwsgi.ini
+++ b/cars_uwsgi.ini
@@ -1,10 +1,10 @@
 [uwsgi]
 
-chdir           = /var/www/cars
+chdir           = /var/www/cars-django-master
 module          = app.wsgi
-home            = /var/www/cars/venv
+home            = /var/www/cars-django-master/venv
 master          = true
 processes       = 10
-socket          = /var/www/cars/cars.sock
+socket          = /var/www/cars-django-master/cars.sock
 chmod-socket    = 666
 vacuum          = true
